# manget

./: index.html
extension/: edge_policy.reg  manget_chrome.crx  updates.xml
extension/manget_chrome/: background.js  manifest.json
manget/: Cargo.toml
manget_cli/: Cargo.toml
manget_server/: Cargo.toml
