[package]
name = "manget"
version = "0.7.2"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", features = ["futures-executor"] }
html-escape = "0.2.13"
log = "0.4.21"
mime = "0.3.17"
regex = "1.10.3"
reqwest = "0.11.25"
sanitize-filename = "0.5.0"
scraper = "0.16.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple_logger = "4.3.3"
tempfile = "3.10.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
zip = "0.6.6"
