[package]
name = "manget_cli"
version = "0.7.0"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.10.2"
manget = { version = "0.*", path = "../manget" }
tokio = { version = "1.36.0", features = ["macros"] }
tower = { version = "0.4.13", features = ["limit", "util"] }
zip = "0.6.6"
