[package]
name = "manget_server"
version = "0.3.0"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
manget = { version = "0.*", path = "../manget" }
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
